--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,498 +1,36 @@
-html {
-    box-sizing: border-box
-}
-*,
-*:before,
-*:after {
-
-}
-
-img {
-    border: 0
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-form,
-input,
-ul,
-ol,
-li,
-header,
-nav,
-footer,
-section {
-    margin: 0;
-    padding: 0;
-    line-height: 1em;
-    list-style: none
-}
-header,
-nav,
-footer,
-section {
-    display: block
-}
-input,
-textarea {
-    font-family: 'Open Sans', sans-serif
-}
-input:focus,
-textarea:focus {
-    outline: none
-}
-textarea {
-    resize: none;
-    overflow: auto
-}
-table,
-table td {
-    margin: 0;
-    padding: 0;
-    border-collapse: collapse;
-    border-spacing: 0
-}
-a {
-    color: #333
-}
-a:hover {
-    text-decoration: none
-}
-::-webkit-input-placeholder {
-    color: #ffffff
-}
-:-moz-placeholder {
-    color: #ffffff
-}
-::-moz-placeholder {
-    color: #ffffff
-}
-:-ms-input-placeholder {
-    color: #ffffff
-}
-
-.clearfix:before,
-.clearfix:after {
-    display: table;
-    line-height: 0;
-    content: ""
-}
-.clearfix:after {
-    clear: both
-}
-.clearboth {
-    clear: both
-}
-.fl {
-    float: left
-}
-.fr {
-    float: right
-}
-.blur {
-    opacity: 0.5
-}
-.intro {
-    background: #f16724;
-    position: relative;
-    width: 100%
-}
-.intro .intro_in {
-    left: 50%;
-    position: fixed;
-    text-align: center;
-    top: 50%;
-    vertical-align: middle;
-    width: 55%;
-    z-index: 0
-}
-.intro .intro_in img {
-    margin: 0 auto 30px;
-    width: 100%
-}
-.intro .intro_in .tagline {
-    color: #fff;
-    font-size: 24px;
-    margin: 0 auto;
-    width: 100%
-}
-.intro .intro_in .tagline p {
-    line-height: 30px
-}
-@media all and (max-width: 640px) {
-    .intro .intro_in {
-        width: 75%
-    }
-    .intro .intro_in .tagline {
-        font-size: 16px;
-        margin: 0 auto
-    }
-    .intro .intro_in .tagline p {
-        line-height: 20px
-    }
-}
-.container {
-    padding: 0 8%;
-    position: relative;
-    z-index: 10
-}
-.content {
-    padding: 90px 0 60px;
-    text-shadow: 1px 1px #fff
-}
-.content h2 {
-    color: #f26724;
-    font-size: 60px;
-    font-weight: normal;
-    padding: 0 0 30px;
-    text-transform: uppercase
-}
-.content h2 a {
-    color: #333;
-    text-decoration: none
-}
-.content p {
-    line-height: 24px;
-    padding: 0 0 16px
-}
-@media all and (max-width: 640px) {
-    .content h2 {
-        font-size: 38px
-    }
-    .content h2 a {
-        color: #333;
-        text-decoration: none
-    }
-    .content p {
-        line-height: 24px;
-        padding: 0 0 16px
-    }
-}
-.topbar {
-    background: url(../images/bg_topbar.png);
-    height: 50px;
-    left: 0;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 90
-}
-.topbar .arrow {
-    cursor: pointer;
-    height: 17px;
-    position: absolute;
-    right: 15px;
-    top: 15px;
-    width: 30px
-}
-#menu {
-    background: #333;
-    height: 100%;
-    left: -280px;
-    position: fixed;
-    top: 0;
-    width: 280px;
-    z-index: 99
-}
-#menu.active {
-    box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.25)
-}
-#menu .btn_menu {
-    cursor: pointer;
-    display: block;
-    height: 32px;
-    position: absolute;
-    top: 8px;
-    right: -47px;
-    width: 32px
-}
-#menu .btn_menu .line1 {
-    background: #fff;
-    height: 2px;
-    left: 0;
-    position: absolute;
-    top: 8px;
-    width: 32px
-}
-#menu .btn_menu .line2 {
-    background: #fff;
-    height: 2px;
-    left: 0;
-    position: absolute;
-    top: 16px;
-    width: 32px
-}
-#menu .btn_menu .line3 {
-    background: #fff;
-    height: 2px;
-    left: 0;
-    position: absolute;
-    top: 24px;
-    width: 32px
-}
-
-#menu .btn_menu.active .line2 {
-    display: none
-}
-
-#menu_in ul {
-    border-bottom: 1px solid #444
-}
-#menu_in ul li {
-    border-bottom: 1px solid #222;
-    border-top: 1px solid #444
-}
-#menu_in ul li a {
-    color: #fff;
-    display: block;
-    padding: 16px 20px;
-    text-decoration: none;
-    text-shadow: 1px 1px #222
-}
-#menu_in ul li a:hover {
-    background: #444;
-    color: #f68954
-}
-
 .director {
-    padding: 40px 0 15px
+    padding: 40px 0 15px;
 }
+
 .director div {
     display: table-cell;
     height: 100%;
-    vertical-align: top
+    vertical-align: top;
 }
+
 .director .title {
     border-right: 1px solid #ccc;
     font-size: 45px;
     line-height: 1.2em;
     padding: 0 4% 0 0;
-    width: 25%
+    width: 25%;
 }
-.director .title span {
-    color: #f16724;
-    display: inline-block;
-    font-size: 16px;
-    line-height: 24px
-}
+
 .director .photo {
     padding: 0 0 0 4%;
-    width: 20%
+    width: 20%;
 }
+
 .director .photo img {
     border-radius: 250px;
     display: block;
     height: auto;
-    width: 100%
+    width: 100%;
 }
+
 .director .info {
     padding: 0 0 0 3%;
-    width: 37%
-}
-@media all and (max-width: 800px) {
-    .director div {
-        display: block
-    }
-    .director .title {
-        border-right: 0;
-        float: right;
-        font-size: 35px;
-        margin: 0 0 15px;
-        padding: 0 0 0 15px;
-        width: 70%
-    }
-    .director .photo {
-        float: left;
-        margin: 0 0 15px;
-        padding: 0;
-        width: 30%
-    }
-    .director .photo img {
-        border-radius: 250px;
-        display: block;
-        height: auto;
-        width: 100%
-    }
-    .director .info {
-        clear: both;
-        padding: 0;
-        width: auto
-    }
-}
-.clients {
-    background: #f7f7f7
-}
-
-
-@media all and (max-width: 800px) {
-    .clients {
-        text-align: center
-    }
-    .clients .client {
-        border-radius: 75px;
-        display: inline-block;
-        float: none;
-        height: 150px;
-        margin: 20px 10px 0;
-        width: 150px
-    }
-}
-
-
-.whatwedo h2,
-.whatwedo p {
-    text-shadow: none
-}
-.whatwedo .content {
-    padding: 15% 40% 15% 0
-}
-@media all and (max-width: 800px) {
-    .whatwedo .content {
-        padding: 15% 0 0 0
-    }
-}
-.contact {
-    background: #f26724;
-    position: relative
-}
-.contact * {
-    text-shadow: none
-}
-.contact h2 {
-    color: #fff
-}
-.contact h3 {
-    border-bottom: 1px solid #fc854b;
-    color: #fff;
-    font-size: 30px;
-    font-weight: normal;
-    margin: 0 0 30px;
-    padding: 0 0 20px
-}
-.contact p {
-    color: #fff;
-    line-height: 20px;
-    padding: 0 0 20px
-}
-
-.contact .col {
-    float: left;
-    padding: 30px 30px 0 0;
-    width: 33%
-}
-.contact .col a {
-    text-decoration: none;
-    color: #fff
-}
-.contact .col a:hover {
-    text-decoration: underline
-}
-.contact .col form {
-    padding: 0 30px 0 0
-}
-.contact .col input {
-    background: #ff8b53;
-    border: 1px solid #ff8b53;
-    color: #fff;
-    font-size: 15px;
-    margin: 0 0 15px;
-    padding: 9px 10px;
-    width: 100%
-}
-.contact .col textarea {
-    background: #ff8b53;
-    border: 1px solid #ff8b53;
-    color: #fff;
-    font-size: 15px;
-    margin: 0 0 15px;
-    min-height: 100px;
-    padding: 9px 10px;
-    width: 100%
-}
-.contact .col input.error,
-.contact .col textarea.error {
-    border: 1px solid #fff
-}
-.contact .col button {
-    background: #ff8b53;
-    border: 0;
-    color: #fff;
-    cursor: pointer;
-    float: right;
-    font-size: 14px;
-    font-weight: bold;
-    padding: 8px 10px
-}
-.contact .wish {
-    display: none
-}
-.contact .phone {
-    font-weight: bold
-}
-.contact .phone a {
-    color: #fff;
-    text-decoration: none
-}
-.contact .phone img {
-    height: 25px;
-    margin: 0 5px -7px 0;
-    width: 25px
-}
-.contact div.error div {
-    color: #fff;
-    padding: 0 0 15px
-}
-.contact .social {
-    float: left;
-    padding: 30px 0 0;
-    width: 33%
-}
-.contact .social a {
-    color: #fff;
-    display: block;
-    height: 33px;
-    line-height: 32px;
-    margin: 0 0 15px;
-    text-decoration: none
-}
-.contact .social a img {
-    height: 30px;
-    margin: 0 5px -10px 0;
-    width: 30px
-}
-@media all and (max-width: 900px) {
-    .contact .col {
-        float: left;
-        padding: 30px 2px 0;
-        width: 50%
-    }
-    .contact .social {
-        clear: both;
-        float: none;
-        margin: 0 2px;
-        width: auto
-    }
-}
-@media all and (max-width: 900px) {
-    .contact .col {
-        clear: both;
-        float: none;
-        margin: 0 2px;
-        padding: 30px 0 0;
-        width: auto
-    }
-}
-
-h3my {
-
-}
-
-qqqw {
-    font-family: fantasy;
+    width: 37%;
 }
 
 h2.persn {
