--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
             jQuery, Ajax, HTTP, Firebug, Web Developer, MVC, QuerySet, Raw-sql
             unit-tests, selenium, nginx etc. You will defenetly enjoy it!</p>
             <p><a class="btn btn-primary btn-lg" href="http://pybursa.com/"
-            role="button">More about PyBursa&raquo;</a></p>
+            role="button">More about PyBursa ></a></p>
         </div>
     </div>
     <div class="container" role="main">
