--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,8 +12,8 @@
     <title>Contacts</title>
 
     <!-- Bootstrap core CSS -->
-     <link href="../static/css/bootstrap.css" rel="stylesheet">
-     <link href="../static/css/style.css" rel="stylesheet">
+     <link  rel="stylesheet" href="../static/css/bootstrap.css">
+     <link rel="stylesheet" href="../static/css/style.css" >
 
   </head>
 
@@ -28,8 +28,8 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
-                <li class="active"><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="index.html">Main</a></li>
+              <li class="active"><a href="contact.html">Contacts</a></li> i>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
