--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,8 @@
 
 
     <!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link  rel="stylesheet" href="../static/css/bootstrap.css">
+     <link rel="stylesheet" href="../static/css/style.css" >
 
 
   <title>Профессиональные Python; Django  курсы</title>
@@ -31,8 +31,8 @@
         </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="index.html">Main<span class="sr-only"></span></a></li>
-              <li class="active"><a href="contact.html">Contacts<span class="sr-only"></span></a></li>
+              <li class="active"><a href="index.html">Main</a></li>
+              <li class="active"><a href="contact.html">Contacts</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
