--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,9 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="http://getbootstrap.com/favicon.ico">
+    <link rel="icon" href="../static/images/Other-python.ico">
 
-    <title>Sticky Footer Navbar Template for Bootstrap</title>
+    <title>Профессиональные Python &amp; Django курсы</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
@@ -40,14 +40,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://getbootstrap.com/examples/sticky-footer-navbar/#">Project name</a>
+          <a class="navbar-brand" href="http://getbootstrap.com/examples/sticky-footer-navbar/#">PyBursa</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li class="dropdown">
+            <li class="active"><a href="index.html">Main</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <!-- <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="#">Action</a></li>
@@ -56,7 +55,7 @@
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Nav header</li>
                 <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
+                <li><a href="#">One more separated link</a></li> -->
               </ul>
             </li>
           </ul>
@@ -67,11 +66,174 @@
     <!-- Begin page content -->
     <div class="container">
       <div class="page-header">
-        <h1>Sticky footer with fixed navbar</h1>
+        <h1>PyBursa course description</h1>
       </div>
-      <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with <code>padding-top: 60px;</code> on the <code>body &gt; .container</code>.</p>
-      <p>Back to <a href="http://getbootstrap.com/examples/sticky-footer">the default sticky footer</a> minus the navbar.</p>
+      <p class="lead">Чем интересен наш курс?</p>
+      <p>Практический курс по изучению современного языка программирования Python и фреимворка Django. 
+         Обучение будет проходить с уклоном в веб-разработку. Мы учим начинающих программистов до уровня Junior Python Developer 
+         и после окончания курса все ученики могут претендовать на эту должность в любой интернет-компанию. 
+         Весь курс построен на практике: преподаватели-практики, обучение на примере разработки реальных проектов, практические домашние задания. 
+         На курсе мы Вас познакомим с языком Python, фреимворком Django, научим работать с базами данных, покажем, как проводить UnitTest, 
+         вместе сделаем работающий проект на Python&nbsp/&nbspDjango и освоим еще много полезного. После успешного окончания обучения всем предоставляется именной сертификат, 
+         который высылается почтой владельцу. Для нас это уже третья группа, и многие из наших учеников успешно работают в сфере Python Development. 
+         Курс совершенствуется из года в год и становится еще более эффективным.</p></br>
+
+      <p class="lead">Программа курса</p>
+      <ol>
+        <li>Основы Python</li>
+          <ul>
+            <li>zen, pep8, pylint, tools, IDE</li>
+            <li>консоль, типы данных, операторы</li>
+            <li>синтаксис управляющих конструкций (if, for...)</li>
+            <li>исключения и разбор стектрейса</li>
+            <li>кодировка в Python</li>
+          </ul>
+        <li>Строки и итераторы</li>
+          <ul>
+            <li>работа со строками и итерируемыми типами</li>
+            <li>запуск скрипта и параметры</li>
+            <li>git http://try.github.com/levels/
+          </ul>
+        <li>Функции и модульность</li>
+          <ul>
+            <li>функции (def, lambda)</li>
+            <li>генераторы списков</li>
+            <li>модули, структура</li>
+          </ul>
+        <li>Библиотеки и пакетный менеджер</li>
+          <ul>
+            <li>встроенные библиотеки http://docs.python.org/</li>
+            <li>сторонние библиотеки (менеджер пакетов) PYPI</li>
+            <li>PYTHONPATH и виртуальное окружение</li>
+          </ul>
+        <li>Классы и ООП, основы</li>
+          <ul>
+            <li>синтаксис, атрибуты, методы, инстанцирование</li>
+            <li>все объект, служебные методы</li>
+          </ul>
+        <li>Классы и ООП, возможности Python</li>
+          <ul>
+            <li>инкапсуляция, наследование, полиморфизм</li>
+            <li>переопределение методов</li>
+            <li>super</li>
+            <li>абстрактные классы</li>
+            <li>статические методы</li>
+          </ul>
+        <li>Работа с файлами</li>
+          <ul>
+            <li>запись и чтение файлов</li>
+            <li>методы объектов-файлов</li>
+            <li>csv, json</li>
+          </ul>
+        <li>Работа с датами</li>
+          <ul>
+            <li>модуль datetime</li>
+          </ul>
+        <li>Основы html/css</li>
+          <ul>
+            <li>html - теги и свойства</li>
+            <li>css - свойства и селекторы</li>
+            <li>каскадное переопределение свойств</li>
+          </ul>
+        <li>Основы JavaScript</li>
+          <ul>
+            <li>Зачем разработчику backend нужно знать js?</li>
+            <li>DOM</li>
+            <li>JS, jQuery, Ajax</li>
+          </ul>
+        <li>Основы Web, HTTP</li>
+          <ul>
+            <li>Django. “Hello world!”</li>
+            <li>HTTP (GET, POST), (200, 404, 500), headers, cookies</li>
+            <li>Инструменты отладки браузера (Firebug, Web Developer)</li>
+          </ul>
+        <li>Django first steps</li>
+          <ul>
+            <li>почему django?</li>
+            <li>введение и описание фреймворка</li>
+            <li>старт проекта</li>
+            <li>команды manage.py</li>
+            <li>django.contrib</li>
+            <li>авторизация, django.contrib.auth</li>
+            <li>админка</li>
+            <li>статика</li>
+          </ul>
+        <li>Структура Web приложения</li>
+          <ul>
+            <li>MVC</li>
+            <li>Views</li>
+            <li>роутинг урлов, передача параметров</li>
+            <li>объект реквест</li>
+            <li>объект респонс</li>
+            <li>обработка реквеста, формирование респонса</li>
+            <li>обработка и изменение хедеров</li>
+            <li>мидлвар</li>
+          </ul>
+        <li>Работа с базами данных, ORM</li>
+          <ul>
+            <li>модели и поля, типы полей и атрибуты</li>
+            <li>связи между таблицами и проектирование БД</li>
+            <li>миграции</li>
+            <li>фикстуры</li>
+            <li>QuerySet</li>
+            <li>Raw-sql</li>
+          </ul>
+        <li>Кастомизация админки</li>
+          <ul>
+            <li>Класс админки</li>
+            <li>настройка отображения виджетов</li>
+            <li>кастомизация ItemView, ListView, редактирование в ListView</li>
+            <li>Сортировка, фильтры, поиск admin actions, редактирование полей в ListView</li>
+            <li>admin actions, редактирование полей в ListView</li>
+            <li>Admin dashboard</li>
+          </ul>
+        <li>Язык шаблонов</li> 	
+          <ul>
+            <li>Синтаксис, логические конструкции</li>
+            <li>наследование и includes</li>
+            <li>Понятие контекста, контекст процессор</li>
+            <li>теги и фильтры</li>
+          </ul>
+        <li>Forms</li> 	
+          <ul>
+            <li>Формы</li>
+            <li>Типы полей</li>
+            <li>Виджеты</li>
+            <li>Атрибуты</li>
+            <li>Валидация</li>
+          </ul>
+        <li>Class-based (Generic) Views</li>
+          <ul>
+            <li>Встроенные class-based views (TemplateView, ListView, ItemView)</li>
+            <li>Использование форм с class-based views</li>
+            <li>Миксины</li>
+          </ul>
+        <li>Реализация стандартных задач</li>
+          <ul>
+            <li>Отправка емейл</li>
+            <li>Кеширование</li>
+            <li>Интернационализация</li>
+            <li>Signup/Login</li>
+          </ul>
+        <li>Средства отладки и тестирование</li>
+          <ul>
+            <li>logging</li>
+            <li>pdb</li>
+            <li>debug toolbar</li>
+            <li>extensions</li>
+            <li>unit-tests</li>
+            <li>selenium</li>
+          </ul>
+        <li>Деплоймент</li>
+          <ul>
+            <li>nginx</li>
+            <li>Управление статикой</li>
+            <li>Деплоймент</li>
+          </ul>
+      <ol>
     </div>
+    </div>
+    <br>
 
     <footer class="footer">
       <div class="container">
