--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,7 @@
       <ul class="nav navbar-nav">
         <li><a href="index.html">Main</a></li>
         <li class="active"><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="student_list.html">Students<span class="sr-only">(current)</span></a></li>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
