--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -7,7 +7,26 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Contacts</title>
     <link rel="stylesheet" href="../static/css/style.css">
-
+    <style type="text/css">
+	   TABLE { 
+	    width: 300px; /* Ширина таблицы */
+	    border: 2px solid black; /* Рамка вокруг таблицы */
+	    background: silver; /* Цвет фона таблицы */
+	   }
+	   TD, TH { 
+	    text-align: left; /* Выравнивание по левому краю */
+	    padding: 3px; /* Поля вокруг содержимого ячеек */
+	   }
+	   TH { 
+	    background: blue; /* Цвет фона */
+	    color: white; /* Цвет текста */
+	    border-bottom: 2px solid black; /* Линия снизу */
+	   }
+	   .lc { 
+	    font-weight: bold; /* Жирное начертание текста */
+	    text-align: left; /* Выравнивание по левому краю */
+	   }
+	</style>
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
@@ -43,52 +62,39 @@
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>	
-	<div class="row">
-	  <div class="col-sm-6 col-md-4">
-	    <div class="thumbnail">
-	      <img src="../static/images/pic2.jpg" width="100px" height="100px">
-	      <div class="caption">
-	        <h3>Director</h3>
-	        <p>Name: Ivan Petrov</p>
-	        <p>Skype: ivan123</p> 
-	        <p>Phone: (123) 456-7892</p>
-	        <a href="mailto:#">123@gmail.com</a>
-	        <p><a href="#" class="btn btn-primary" role="button">Contact</a> 
-	      </div>
-	    </div>
-	  </div>
+	<div class="jumbotron">
+	  <img src="../static/images/img1.gif" width="100px" height="100px">		
+	  <h1>Ivanov Petr</h1>
+	  <p>Student's card</p>
+	  <p><a class="btn btn-primary btn-lg" href="student_list.html" role="button">About me</a></p>
 	</div>
-	<div class="row">
-	  <div class="col-sm-6 col-md-4">
-	    <div class="thumbnail">
-	      <img src="../static/images/pic1.jpg" width="100px" height="100px">
-	      <div class="caption">
-	        <h3> Manager</h3>
-	        <p>Name: Alex Ivanov</p>
-	        <p>Skype: Alex12</p> 
-	        <p>Phone: (123) 456-7891</p>
-	        <a href="mailto:#">AlexIvanov@gmail.com</a>
-	        <p><a href="#" class="btn btn-primary" role="button">Contact</a> 
-	      </div>
-	    </div>
-	  </div>
+
+	  <!-- Table -->
+	  <table class="table">
+	    <tr><td>Surname</td><td>Ivanov</td>
+	    <tr><td>Name</td><td>Petr</td>
+	    <tr><td>Patronymic</td><td>PetrI</td>
+	    <tr><td>Birth Date</td><td>28.01.1983</td>
+	    <tr><td>Address</td><td>Mira 20</td>
+	    <tr><td>E-mail</td><td>Petr@ukr.net</td>
+	    <tr><td>Skype</td><td>PetrI</td>	
+	  </table>
 	</div>
-	<div class="row">
-	  <div class="col-sm-6 col-md-4">
-	    <div class="thumbnail">
-	      <img src="../static/images/pic3.jpg" width="100px" height="100px">
-	      <div class="caption">
-	        <h3>Founder</h3>
-	        <p>Name: Daria Bondarenko</p>
-	        <p>Skype: daria</p> 
-	        <p>Phone: (123) 456-7890</p>
-	        <a href="mailto:#">daria123@gmail.com</a>
-	        <p><a href="#" class="btn btn-primary" role="button">Contact</a> 
-	      </div>
-	    </div>
-	  </div>
+	<table class="table">
+	    <tr>
+	        <th>Course</th>
+	        <th>Week</th>
+	        <th>Control type</th>
+	        <th>Grade</th>
+	        
+	    </tr>
+	    <tr><td>Python</td><td>Wee1</td><td>Problem Task</td><td>100%</td></tr>
+	    <tr><td></td><td>Wee1</td><td>Tests</td><td>100%</td></tr>
+	    <tr><td></td><td>Week2</td><td>Problem Task</td><td>100%</td></tr>
+	    <tr><td></td><td>Wee2</td><td>Tests</td><td>100%</td></tr>
+	</table>
 	</div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../static/js/bootstrap.min.js"></script>
