--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -5,8 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Contacts</title>
+    <title>Students</title>
     <link rel="stylesheet" href="../static/css/style.css">
+    <style type="text/css">
+	   TABLE { 
+	    width: 300px; /* Ширина таблицы */
+	    border: 2px solid black; /* Рамка вокруг таблицы */
+	    background: silver; /* Цвет фона таблицы */
+	   }
+	   TD, TH { 
+	    text-align: left; /* Выравнивание по левому краю */
+	    padding: 3px; /* Поля вокруг содержимого ячеек */
+	   }
+	   TH { 
+	    background: blue; /* Цвет фона */
+	    color: white; /* Цвет текста */
+	    border-bottom: 2px solid black; /* Линия снизу */
+	   }
+	   .lc { 
+	    font-weight: bold; /* Жирное начертание текста */
+	    text-align: left; /* Выравнивание по левому краю */
+	   }
+	</style>
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -31,7 +51,7 @@
 	      </button>
 	      <a class="navbar-brand" href="index.html">ITBursa-2015</a>
 	    </div>
-	    
+
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
@@ -43,54 +63,38 @@
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>	
-	<div class="row">
-	  <div class="col-sm-6 col-md-4">
-	    <div class="thumbnail">
-	      <img src="../static/images/pic2.jpg" width="100px" height="100px">
-	      <div class="caption">
-	        <h3>Director</h3>
-	        <p>Name: Ivan Petrov</p>
-	        <p>Skype: ivan123</p> 
-	        <p>Phone: (123) 456-7892</p>
-	        <a href="mailto:#">123@gmail.com</a>
-	        <p><a href="#" class="btn btn-primary" role="button">Contact</a> 
-	      </div>
-	    </div>
+	<div class="panel panel-default">
+
+	  <!-- Default panel contents -->
+	  <div class="panel-heading">Students of ITBursa-2015</div>
+	  <div class="panel-body">
+	    <p>Students list</p>
 	  </div>
+
+	  <!-- Table -->
+	  <table class="table">
+	    <colgroup style="background-color: yellow"></colgroup>
+	    <colgroup style="background-color: yellow"></colgroup>
+	    <colgroup style="background-color: yellow"></colgroup>
+	    <colgroup style="background-color: yellow"></colgroup>
+	    <colgroup style="background-color: yellow"></colgroup>
+	    <tr>
+	        <th>No</th>
+	        <th>Surname</th>
+	        <th>Name</th>
+	        <th>Address</th>
+	        <th>Skype</th>
+	    </tr>
+	    <tr><td><a href="student_detail.html">1</a></td><td>Ivanov</td><td>Petr</td><td>12345</td><td>P.Ivanov</td></tr>
+	    <tr><td>2</td><td>Petrova</td><td>Anna</td><td>12345</td><td>A.Petrova</td></tr>
+	    <tr><td>3</td><td>Petrov</td><td>Ivan</td><td>12345</td><td>I.Petrov</td></tr>
+	    <tr><td>4</td><td>Kox</td><td>Irina</td><td>12345</td><td>I.Kox</td></tr>
+	    <tr><td>5</td><td>Sova</td><td>Tim</td><td>12345</td><td>T.Sova</td></tr>
+	  </table>
 	</div>
-	<div class="row">
-	  <div class="col-sm-6 col-md-4">
-	    <div class="thumbnail">
-	      <img src="../static/images/pic1.jpg" width="100px" height="100px">
-	      <div class="caption">
-	        <h3> Manager</h3>
-	        <p>Name: Alex Ivanov</p>
-	        <p>Skype: Alex12</p> 
-	        <p>Phone: (123) 456-7891</p>
-	        <a href="mailto:#">AlexIvanov@gmail.com</a>
-	        <p><a href="#" class="btn btn-primary" role="button">Contact</a> 
-	      </div>
-	    </div>
-	  </div>
-	</div>
-	<div class="row">
-	  <div class="col-sm-6 col-md-4">
-	    <div class="thumbnail">
-	      <img src="../static/images/pic3.jpg" width="100px" height="100px">
-	      <div class="caption">
-	        <h3>Founder</h3>
-	        <p>Name: Daria Bondarenko</p>
-	        <p>Skype: daria</p> 
-	        <p>Phone: (123) 456-7890</p>
-	        <a href="mailto:#">daria123@gmail.com</a>
-	        <p><a href="#" class="btn btn-primary" role="button">Contact</a> 
-	      </div>
-	    </div>
-	  </div>
-	</div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../static/js/bootstrap.min.js"></script>
   </body>
-</html>	
+</html>
