--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,19 +5,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
-
-    <title>PyBursa Contacts</title>
-
-    <!-- Bootstrap core CSS -->
+    <title>PyBursa Project</title>
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet">
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
-
-    <link href="../static/carousel.css" rel="stylesheet">
+    <script type="text/javascript" src="../static/js/mine.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
   </head>
 <!-- NAVBAR
 ================================================== -->
@@ -31,6 +25,7 @@
               <ul class="nav navbar-nav">
                 <li><a href="index.html">Main</a></li>
                 <li class="active"><a href="contact.html">Contacts</a></li>
+                <li><a href="student_list.html">Students</a></li>
                   </ul>
                 </li>
               </ul>
