--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Contacts</title>
+    <title>Student_list</title>
     <link rel="stylesheet" href="../static/css/style.css">
     <style type="text/css">
 	   TABLE { 
@@ -65,7 +65,7 @@
 	<div class="jumbotron">
 	  <img src="../static/images/img1.gif" width="100px" height="100px">		
 	  <h1>Ivanov Petr</h1>
-	  <p>Student's card</p>
+	  <p>Student's card ITBursa</p>
 	  <p><a class="btn btn-primary btn-lg" href="student_list.html" role="button">About me</a></p>
 	</div>
 
@@ -90,6 +90,8 @@
 	    </tr>
 	    <tr><td>Python</td><td>Wee1</td><td>Problem Task</td><td>100%</td></tr>
 	    <tr><td></td><td>Wee1</td><td>Tests</td><td>100%</td></tr>
+	    <tr><td></td><td>Wee1</td><td>Average Grade</td><td>100%</td></tr>
+	    <tr><td></td><td>Wee1</td><td>Rating</td><td>100%</td></tr>
 	    <tr><td></td><td>Week2</td><td>Problem Task</td><td>100%</td></tr>
 	    <tr><td></td><td>Wee2</td><td>Tests</td><td>100%</td></tr>
 	</table>
