--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -58,81 +58,112 @@
     <div class="container theme-showcase" role="main">
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1 class="course">Persianova Olena</h1>
-        <div class="bs-example" data-example-id="simple-table">
-          <table class="table table-striped table table-bordered">
-            <caption>Student's card</caption>
-            <tbody>
-              <tr>
-                <td>Surname</td>
-                <td>Persianova</td>
-              </tr>
-              <tr>
-                <td>Name</td>
-                <td>Olena</td>
-              </tr>
-              <tr>
-                <td>Patronymic</td>
-                <td>Yuriivna</td>
-              </tr>
-              <tr>
-                <td>Birth Date</td>
-                <td>11/02/1989</td>
-              </tr>
-              <tr>
-                <td>Address</td>
-                <td>Kyivska Street 55/11, Kharkiv, 63101, Ukrane</td>
-              </tr>
-              <tr>
-                <td>E-mail</td>
-                <td>Olena.Persianova@gmail.com</td>
-              </tr>
-              <tr>
-                <td>Skype</td>
-                <td>Olena.Persianova</td>
-              </tr>
-              <tr>
-                <td>Average Grade</td>
-                <td>99.8</td>
-              </tr>
-              <tr>
-                <td>Rating</td>
-                <td>20</td>
-              </tr>
-              
-            </tbody>
-          </table>
-        </div><!-- /example -->
-        
-        <div class="bs-example" data-example-id="simple-table">
-          <table class="table table-striped table table-bordered">
-            <caption>Graduation year - 2015.</caption>
-            <thead>
-              <tr>
-                <th>Course</th>
-                <th>Week</th>
-                <th>Control Type</th>
-                <th>Grade</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">Introduction to Python</th>
-                <td>Week 1</td>
-                <td>Tests <br>Problem Task 1<br>Problem Task 2</td>
-                <td>99%<br>100%<br>100%</td>
-              </tr>
-              <tr>
-                <th scope="row"></a></th>
-                <td>Week 2</td>
-                <td>Tests <br>Problem Task 1<br></td>
-                <td>100%<br>100%</td>
-              </tr>
-            </tbody>
-          </table>
-        </div><!-- /example -->
-      </div>
+        <div class="row">
+          <div class="col-sm-6">
+            <h1 class="course">Persianova Olena</h1>
+            <img src="../static/images/darka.jpg"  alt="Daria Mykhalevych" style="width:90px;height:120px;">
+            <div class="bs-example" data-example-id="simple-table">
+              <table class="table table-striped table table-bordered">
+                <caption>Student's card</caption>
+                <tbody>
+                  <tr>
+                    <td>Surname</td>
+                    <td>Persianova</td>
+                  </tr>
+                  <tr>
+                    <td>Name</td>
+                    <td>Olena</td>
+                  </tr>
+                  <tr>
+                    <td>Patronymic</td>
+                    <td>Yuriivna</td>
+                  </tr>
+                  <tr>
+                    <td>Birth Date</td>
+                    <td>11/02/1989</td>
+                  </tr>
+                  <tr>
+                    <td>Address</td>
+                    <td>Kyivska Street 55/11, Kharkiv, 63101, Ukrane</td>
+                  </tr>
+                  <tr>
+                    <td>E-mail</td>
+                    <td>Olena.Persianova@gmail.com</td>
+                  </tr>
+                  <tr>
+                    <td>Skype</td>
+                    <td>Olena.Persianova</td>
+                  </tr>
+                  <tr>
+                    <td>Average Grade</td>
+                    <td>99.8</td>
+                  </tr>
+                  <tr>
+                    <td>Rating</td>
+                    <td>20</td>
+                  </tr>
+
+                </tbody>
+              </table>
+            </div><!-- /example -->
+
+            <div class="bs-example" data-example-id="simple-table">
+              <table class="table table-bordered table table-condensed">
+                <caption>Grades</caption>
+                <thead>
+                  <tr class="info">
+                    <th>Course</th>
+                    <th>Week</th>
+                    <th>Control Type</th>
+                    <th>Grade</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr class="generic">
+                    <td rowspan="5">Introduction to Python</th>
+                    <td rowspan="3">Week 1</td>
+                    <td>Tests</td>
+                    <td>99%</td>
+                  </tr>
+                  <tr class="generic">
+                    <td>Problem Task 1</td>
+                    <td>100%</td>
+                  </tr>
+                  <tr class="generic">
+                    <td>Problem Task 2</td>
+                    <td>100%</td>
+                  </tr>
+                  <tr class="generic">
+                    <td rowspan="2">Week 2</td>
+                    <td>Tests</td>
+                    <td>100%</td>
+                  </tr>
+                  <tr class="generic">
+                    <td>Problem Task 1<br></td>
+                    <td>100%</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        <div class="col-sm-3 col-sm-offset-3">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">About us</h3>
+            </div>
+            <div class="panel-body">
+             Course Outline
+            </div>
+            <div class="panel-body">
+             Resource Center
+            </div>
+            <div class="panel-body">
+             Directions
+            </div>
+          </div>
+        </div>
       
+  </div>
       
       
       <!-- Site footer -->
