--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 
 
   <title>Профессиональные Python; Django  курсы</title>
-    <![endif]-->
+
 </head>
 
 <body>
@@ -51,12 +51,12 @@
       <div class="panel panel-default">
         <div class="panel-body">
             <div class="list-group">
-              <a  class="list-group-item active">
+              <div  class="list-group-item active">
                 <h4 class="list-group-item-heading">
                     Запишись на курсы Python
                     Попади в тренд современной
                     WEB разработки</h4>
-              </a>
+              </div>
             </div>
         </div>
         <div class="panel panel-default">
