--- a/templates/contact.html
+++ b/templates/contact.html
@@ -29,68 +29,120 @@
                 </div>
             </div>
 
+
+             <div class="jumbotron commands">
+                 <div class="container">
+                     <img src="../static/images/Shocked-Pups.jpg">
+                 </div>
+             </div>
+
+
+            <hr>
+
             <div class="inner cover">
+
                 <!-- Example row of columns -->
                 <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-4">
-                        <h1 class="amber">Director</h1>
+                    <div class="col-lg-4">
+                        <img class="img-circle"
+                             src="../static/images/McCTpH_E.jpg"
+                             alt="Generic placeholder image" width="140" height="140">
 
-                        <div class="line"></div>
-                        <ul class="contact-info">
-                            <li>
-                                Name: Frank Sinatra
-                            </li>
-                            <li>
-                                Email: hello@domain.com
-                            </li>
-                            <li>
-                                Phone: (900) 987 65 43, (900) 234 56 78
-                            </li>
-                            <li>
-                                Skype: franky.sinatra
-                            </li>
-                        </ul>
+                        <h2 class="deep-orange-darken-1">Director</h2>
 
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4">
-                        <h1 class="deep-orange-darken-1">Manager</h1>
+                        <dl>
+                            <dt>Name: </dt>
+                            <dd>Frank Sinatra</dd>
+                            <dt>Phone: </dt>
+                            <dd>0800-123-45-67</dd>
+                            <dt>Email: </dt>
+                            <dd>info@domain.com</dd>
+                            <dt>Skype: </dt>
+                            <dd>franki.sin</dd>
+                        </dl>
 
-                        <div class="line"></div>
-                        <ul class="contact-info">
-                            <li>
-                                Name: Frank Sinatra
-                            </li>
-                            <li>
-                                Email: hello@domain.com
-                            </li>
-                            <li>
-                                Phone: (900) 987 65 43, (900) 234 56 78
-                            </li>
-                            <li>
-                                Skype: franky.sinatra
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4">
-                        <h1 class="pink-darken-4">Founder </h1>
+                        <h6>It is PyBursa, baby</h6>
 
-                        <div class="line"></div>
-                        <ul class="contact-info">
-                            <li>
-                                Name: Frank Sinatra
-                            </li>
-                            <li>
-                                Email: hello@domain.com
-                            </li>
-                            <li>
-                                Phone: (900) 987 65 43, (900) 234 56 78
-                            </li>
-                            <li>
-                                Skype: franky.sinatra
-                            </li>
-                        </ul>
 
                     </div>
+                    <!-- /.col-lg-4 -->
+                    <div class="col-lg-4">
+                        <img class="img-circle"
+                             src="../static/images/6ec195d634dc1f56d1970d8750a8945008bc3389.jpg"
+                             alt="Generic placeholder image" width="140" height="140">
+
+                        <h2 class="green">Manager</h2>
+
+                        <dl>
+                            <dt>Name: </dt>
+                            <dd>Frank Sinatra</dd>
+                            <dt>Phone: </dt>
+                            <dd>0800-123-45-67</dd>
+                            <dt>Email: </dt>
+                            <dd>info@domain.com</dd>
+                            <dt>Skype: </dt>
+                            <dd>franki.sin</dd>
+                        </dl>
+
+
+                    </div>
+                    <!-- /.col-lg-4 -->
+                    <div class="col-lg-4">
+                        <img class="img-circle"
+                             src="../static/images/python.png"
+                             alt="Generic placeholder image" width="140" height="140">
+
+                        <h2 class="red">Founder</h2>
+
+                        <dl>
+                            <dt>Name: </dt>
+                            <dd>Frank Sinatra</dd>
+                            <dt>Phone: </dt>
+                            <dd>0800-123-45-67</dd>
+                            <dt>Email: </dt>
+                            <dd>info@domain.com</dd>
+                            <dt>Skype: </dt>
+                            <dd>franki.sin</dd>
+                        </dl>
+
+
+                    </div>
+                    <!-- /.col-lg-4 -->
+                </div>
+
+            </div>
+
+            <hr>
+
+            <div class="inner cover">
+                <div class="form-group has-success has-feedback">
+                    <label class="control-label" for="inputSuccess2">Input with success</label>
+                    <input type="text" class="form-control" id="inputSuccess2" aria-describedby="inputSuccess2Status">
+                    <span class="glyphicon glyphicon-ok form-control-feedback" aria-hidden="true"></span>
+                    <span id="inputSuccess2Status" class="sr-only">(success)</span>
+                </div>
+                <div class="form-group has-warning has-feedback">
+                    <label class="control-label" for="inputWarning2">Input with warning</label>
+                    <input type="text" class="form-control" id="inputWarning2" aria-describedby="inputWarning2Status">
+                    <span class="glyphicon glyphicon-warning-sign form-control-feedback" aria-hidden="true"></span>
+                    <span id="inputWarning2Status" class="sr-only">(warning)</span>
+                </div>
+                <div class="form-group has-error has-feedback">
+                    <label class="control-label" for="inputError2">Input with error</label>
+                    <input type="text" class="form-control" id="inputError2" aria-describedby="inputError2Status">
+                    <span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>
+                    <span id="inputError2Status" class="sr-only">(error)</span>
+                </div>
+                <div class="form-group has-success has-feedback">
+                    <label class="control-label" for="inputGroupSuccess1">Input group with success</label>
+
+                    <div class="input-group">
+                        <span class="input-group-addon">@</span>
+                        <input type="text" class="form-control" id="inputGroupSuccess1"
+                               aria-describedby="inputGroupSuccess1Status">
+                    </div>
+                    <span class="glyphicon glyphicon-ok form-control-feedback" aria-hidden="true"></span>
+                    <span id="inputGroupSuccess1Status" class="sr-only">(success)</span>
                 </div>
             </div>
 
@@ -99,11 +151,12 @@
     </div>
 
 </div>
+
 <div class="jumbotron alert-success">
     <div class="row">
         <div class="container">
             <div class="divider">
-                <h4>Этот блок существует на средства вырученые от продажи велика</h4>
+                <h4 class="alert-info">Этот блок существует на средства вырученые от продажи велика</h4>
             </div>
         </div>
     </div>
