--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
 </nav>
 
 <div class="page-header align-center">
-  <h1 class = "align-center big-font">PyBursa<small> professional course of Python</small></h1>
+  <h1 class = "align-center big-font">PyBursa - professional course of Python</h1>
 
 
   <div class="container">
@@ -68,12 +68,12 @@
           <tr>
             <td>1</td>
             <td>Chapter One - Why we Program?</td>
-            <td>Welcome <br /> Lecture materials <br />  Additional Materials</td>
+            <td>Welcome <br> Lecture materials <br>  Additional Materials</td>
           </tr>
           <tr>
             <td>2</td>
             <td>Installing and Using Python</td>
-              <td>Installing Python - Overview <br /> Recommended: Install Python - Windows 8 <br />  Recommended: Using Python - Macintosh<br /> Recommended: Using Python on a Raspberry Pi <br /> Recommended: Install Python - Windows Vista <br /> Optional: Python Installation </td>
+              <td>Installing Python - Overview <br> Recommended: Install Python - Windows 8 <br>  Recommended: Using Python - Macintosh<br> Recommended: Using Python on a Raspberry Pi <br> Recommended: Install Python - Windows Vista <br> Optional: Python Installation </td>
           </tr>
         </table>
       </div>
