--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <div class="container">
-            <h2><b>Description</b>:</h2>
+            <h2>Description:</h2>
             <p>Pybursa is a great place where you can learn basic Python and
             Django framework. Also you will be up to date with big number of
             useful tools/technologies such a pep8, CLI, git, csv, json, JS,
@@ -87,7 +87,7 @@
         </div>
     </div>
     <div class="container" role="main">
-        <h2 class="sub-header">Program covers next topics:</h2>
+    <h2>Program covers next topics:</h2>
         <div class="table-responsive">
             <table class="table table-striped" width="10">
                 <tbody>
