--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
         </div>
     </div>
     <div class="container" role="main">
-    <h2>Program covers next topics:</h2>
+    <h2>Program</h2>
         <div class="table-responsive">
             <table class="table table-striped" width="10">
                 <tbody>
