--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <div class="container">
-            <h2>Description:</h2>
+            <h2>Description</h2>
             <p>Pybursa is a great place where you can learn basic Python and
             Django framework. Also you will be up to date with big number of
             useful tools/technologies such a pep8, CLI, git, csv, json, JS,
