--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,12 @@
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
     </nav>
-    <h1>Description PyBursa</h1>
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <h1>PyBursa Description</h1>
+      </div>
+    </div>
+
     <div class="jumbotron">
       <div class="container">
 
