--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -102,7 +102,7 @@
       <tr>
         <td>Python</td>
         <td>Week 1</td>
-        <td>Test</td>
+        <td>Tests</td>
         <td>100%</td>
       </tr>
       <tr>
@@ -114,7 +114,7 @@
       <tr>
         <td>Own Project</td>
         <td>Week 3</td>
-        <td>Test</td>
+        <td>Problem Task</td>
         <td>100%</td>
       </tr>
     </tbody>
