--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
         </div><!--/.container-fluid -->
     </nav>
     <div class="panel panel-default">
-      <div class="panel-body">
+      <div class="mystl">
         <h1>PyBursa Description</h1>
       </div>
     </div>
@@ -54,7 +54,7 @@
             Практические занятия в аудитории + онлайн лекции.</p>
 
       <div class="panel panel-default">
-        <div class="panel-body">
+        <div class="mystl">
             <div class="list-group">
               <div  class="list-group-item active">
                 <h4 class="list-group-item-heading">
