--- a/templates/contact.html
+++ b/templates/contact.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="../../favicon.ico">
 		<linc href="../static/css/style.css" rel="stylesheet">
 
-    <title>Main</title>
+    <title>Contacts</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
