--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="../../favicon.ico">
 		<linc href="../static/css/style.css" rel="stylesheet">
 
-    <title>Main</title>
+    <title>Student list</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
