added second task

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -115,6 +115,8 @@
     </tbody>
   </table>
 </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
 
 <div class="hide">
     <div class="alert alert-success" role="alert">Пора</div>
