--- a/templates/contact.html
+++ b/templates/contact.html
@@ -51,9 +51,13 @@
                 "../static/images/andy_ehrman.jpg"></div>
                 <div class="info">
                     <blockquote class="blockquote-reverse">
-                        <p>"Hindi ako perfect and kahit kailan, hindi ko hihilingin na maging perfect ka. Ang hihilingin ko, subukan mong baguhin ang sarili mo para maramdaman mo na karapat-dapat ka. But you never tried."</p>
+                        <p>"Hindi ako perfect and kahit kailan, hindi ko
+                        hihilingin na maging perfect ka. Ang hihilingin ko,
+                        subukan mong baguhin ang sarili mo para maramdaman mo
+                        na karapat-dapat ka. But you never tried."</p>
                         <footer>
-                            Bea Alonzo in <cite title="Source Title">She’s the One (2013)</cite>
+                            Bea Alonzo in <cite title="Source Title">She’s the
+                            One (2013)</cite>
                         </footer>
                     </blockquote>
                 </div>
@@ -76,9 +80,12 @@
                 "../static/images/lizzy_rady.jpg"></div>
                 <div class="info">
                     <blockquote class="blockquote-reverse">
-                        <p>"She loved me at my worst. You had me at my best, but binalewala mo lang ang lahat… And you chose to break my heart."</p>
+                        <p>"She loved me at my worst. You had me at my best,
+                        but binalewala mo lang ang lahat… And you chose to
+                        break my heart."</p>
                         <footer>
-                            John Lloyd Cruz in <cite title="Source Title">One More Chance (2007)</cite>
+                            John Lloyd Cruz in <cite title="Source Title">One
+                            More Chance (2007)</cite>
                         </footer>
                     </blockquote>
                 </div>
@@ -102,10 +109,13 @@
                 "../static/images/katherine_rooks.jpg"></div>
                 <div class="info">
                     <blockquote class="blockquote-reverse">
-                        <p>"May mga maswerteng tao na nahanap na yung taong para sa kanila. May mga taong patuloy na naghahanap at may iba na sumuko na. Pero yung pinakamasaklap eh yung na sayo na pinakawalan mo pa."</p>
+                        <p>"May mga maswerteng tao na nahanap na yung taong
+                        para sa kanila. May mga taong patuloy na naghahanap at
+                        may iba na sumuko na. Pero yung pinakamasaklap eh yung
+                        na sayo na pinakawalan mo pa."</p>
                         <footer>
-                            John Lloyd Cruz in <cite title="Source Title">
-                            My Amnesia Girl (2010)</cite>
+                            John Lloyd Cruz in <cite title="Source Title">My
+                            Amnesia Girl (2010)</cite>
                         </footer>
                     </blockquote>
                 </div>
