--- a/templates/index.html
+++ b/templates/index.html
@@ -42,16 +42,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <h2>Description</h2>
-                    <p>Pybursa is a great place where you can learn basic
-                    Python and Django framework. Also you will be up to date
-                    with big number of useful tools/technologies such a pep8,
-                    CLI, git, csv, json, JS, jQuery, Ajax, HTTP, Firebug, Web
-                    Developer, MVC, QuerySet, Raw-sql unit-tests, selenium,
-                    nginx etc. You will defenetly enjoy it!</p>
-                    <p><a class="btn btn-primary btn-lg" href=
-                    "http://pybursa.com/" role="button">More about PyBursa
-                    &gt;</a></p>
+                    <div>
+                        <h2>Description</h2>
+                        <p>Pybursa is a great place where you can learn basic
+                        Python and Django framework. Also you will be up to
+                        date with big number of useful tools/technologies such
+                        a pep8, CLI, git, csv, json, JS, jQuery, Ajax, HTTP,
+                        Firebug, Web Developer, MVC, QuerySet, Raw-sql
+                        unit-tests, selenium, nginx etc. You will defenetly
+                        enjoy it!</p>
+                        <p><a class="btn btn-primary btn-lg" href=
+                        "http://pybursa.com/" role="button">More about PyBursa
+                        &gt;</a></p>
+                    </div>
                 </div>
                 <div class="row">
                     <hr>
@@ -59,8 +62,7 @@
                     <iframe allowfullscreen="true" frameborder="0" height="240"
                     src=
                     "http://coub.com/embed/acw5gmi?muted=false&autostart=false&originalSize=false&hideTopBar=true&startWithHD=true"
-                    width="320">
-                    </iframe>
+                    width="320"></iframe>
                 </div>
             </div>
         </div>
