--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,86 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>iBursa Contacts</title>
-
-    <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+<head>
+  <meta charset="utf-8">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>iBursa Contacts</title><!-- Bootstrap -->
+  <link href="../static/css/bootstrap.css" rel="stylesheet">
+  <link href="../static/css/style.css" rel="stylesheet">
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body background="../static/images/computer-science-curriculmn1.png" width="100%">
-    <div class="container">
-
-      <!-- Static navbar -->
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <img src="../static/images/python-128.png" width="30" heith="30" vspace="10" hspace="10">
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="index.html">Main</a></li>
-              <li class="active"><a href="contact.html">Contacts</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
-      </nav>
-
-      <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron" "transparent">
-        <h1>iBursa</h1>
-        <h2>Contacts</h2>
-        <ul>
-        <li><b>Director</b></li>
-          <img src="../static/images/tim-cook.png" height="150">
-            <ul>
-              <li><b>Name:</b> Tim Cook</li>
-              <li><b>Skype:</b> timcook</li>
-              <li><b>Email:</b> timcook@apple.com</li>
-              <li><b>Phone:</b> +1 555 55 555 75</li>
-            </ul>
-          </li>
-          <br>
-        <li><b>Manager</b></li>
-          <img src="../static/images/eddy_cue.png" height="150">
-        <ul>
-          <li><b>Name:</b> Eddy Cue</li>
-          <li><b>Skype:</b> eddy.cue</li>
-          <li><b>Email:</b> eddy.cue@apple.com</li>
-          <li><b>Phone:</b> +1 555 55 555 76</li>
+</head>
+<body>
+  <div class="container">
+    <!-- Static navbar -->
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header"><button aria-controls="navbar"
+        aria-expanded="false" class="navbar-toggle collapsed" data-target=
+        "#navbar" data-toggle="collapse" type="button"><span class=
+        "sr-only">Toggle navigation</span> <span class="icon-bar"></span>
+        <span class="icon-bar"></span> <span class="icon-bar"></span></button>
+        <img hspace="10" src="../static/images/python-128.png" vspace="10"
+        width="30"></div>
+        <div class="navbar-collapse collapse" id="navbar">
+          <ul class="nav navbar-nav">
+            <li>
+              <a href="index.html">Main</a>
+            </li>
+            <li class="active">
+              <a href="contact.html">Contacts</a>
+            </li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div><!--/.container-fluid -->
+    </nav>
+    <!-- Main component for a primary marketing message or call to action -->
+    <div class="jumbotron transparent">
+      <h1 class="change">iBursa</h1>
+      <h2 class="change">Contacts</h2>
+      <hr>
+      <ul>
+        <li>
+          <h3 class="director change">Director</h3>
+        </li>
+        <li style="list-style: none">
+          <img height="150" src="../static/images/tim-cook.png">
+          <ul>
+            <li><b>Name:</b> Tim Cook</li>
+            <li><b>Skype:</b> timcook</li>
+            <li><b>Email:</b> timcook@apple.com</li>
+            <li><b>Phone:</b> +1 555 55 555 75</li>
           </ul>
         </li>
-          <br>
-        <li><b>Founder</b></li>
-          <img src="../static/images/steve.png" height="150">
-        <ul>
-          <li><b>Name:</b> Stebe Jobs</li>
-          <li><b>Skype:</b> ---</li>
-          <li><b>Email:</b> ---</li>
-          <li><b>Phone:</b> ---</li>
+      </ul>
+      <hr>
+      <ul>
+        <li>
+          <h3 class="director change">Manager</h3>
+        </li>
+        <li style="list-style: none">
+          <img height="150" src="../static/images/eddy_cue.png">
+          <ul>
+            <li><b>Name:</b> Eddy Cue</li>
+            <li><b>Skype:</b> eddy.cue</li>
+            <li><b>Email:</b> eddy.cue@apple.com</li>
+            <li><b>Phone:</b> +1 555 55 555 76</li>
           </ul>
         </li>
-      </div>
-    </div> <!-- /container -->
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-  </body>
+      </ul>
+      <hr>
+      <ul>
+        <li>
+          <h3 class="director change">Founder</h3>
+        </li>
+        <li style="list-style: none">
+          <img height="150" src="../static/images/steve.png">
+          <ul>
+            <li><b>Name:</b> Steve Jobs</li>
+            <li><b>Skype:</b> ---</li>
+            <li><b>Email:</b> ---</li>
+            <li><b>Phone:</b> ---</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div><!-- /container -->
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src=
+  "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
+  </script> 
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+   
+  <script src="js/bootstrap.min.js">
+  </script>
+</body>
 </html>
