--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -77,6 +77,14 @@
                         <td>Skype</td>
                         <td>serdyk_m</td>
                       </tr>
+                        <tr>
+                        <td>Rating</td>
+                        <td>34</td>
+                      </tr>
+                        <tr>
+                        <td>Average Grade</td>
+                        <td>serdyk_m</td>
+                      </tr>
                     </table>
                   </div>
                   <ul class="list-group">
@@ -101,7 +109,7 @@
   <tr>
     <td rowspan="6" align="left" valign="top">PY 101 Введение в Python</td>
     <td rowspan="3" align="left" valign="top"><div align="left">Week1</div></td>
-    <td>Test</td>
+    <td>Tests</td>
     <td>99 %</td>
   </tr>
   <tr>
@@ -114,7 +122,7 @@
   </tr>
   <tr>
     <td rowspan="3" align="left" valign="top">Week2</td>
-    <td>Test</td>
+    <td>Tests</td>
     <td>97 %</td>
   </tr>
   <tr>
